[package]
name = "sui-types"
version = "0.1.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anemo = { git = "https://github.com/mystenlabs/anemo.git", rev = "26d415eb9aa6a2417be3c03c57d6e93c30bd1ad7" }
anyhow = "1.0.71"
bincode = "1.3.3"
bcs = "0.1.4"
byteorder = "1.4.3"
chrono = { version = "0.4.26", features = ["clock", "serde"] }
consensus-config = { git = "https://github.com/mystenlabs/sui", package = "consensus-config", tag = "mainnet-v1.26.2" }
num_enum = "0.6.1"
im = "15"
itertools = "0.10.5"
nonempty = "0.9.0"
once_cell = "1.18.0"
prometheus = "0.13.3"
rand = "0.8.5"
serde = { version = "1.0.144", features = ["derive", "rc"] }
serde-name = "0.2.1"
thiserror = "1.0.40"
tracing = "0.1.37"
serde_json = { version = "1.0.95", features = [
    "preserve_order",
    "arbitrary_precision",
] }
serde_with = { version = "2.1.0", features = ["hex"] }
signature = "1.6.0"
static_assertions = "1.1.0"
schemars = { version = "0.8.10", features = ["either"] }
tap = "1.0.1"
tonic = { version = "0.11", features = ["transport"] }
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24.3"
roaring = "0.10.1"
enum_dispatch = "^0.3"
eyre = "0.6.8"
indexmap = { version = "2.1.0", features = ["serde"] }
derivative = "2.2.0"
# jsonrpsee = { git = "https://github.com/wlmyng/jsonrpsee.git", rev = "b1b300784795f6a64d0fcdf8f03081a9bc38bde8", features = [
#     "server",
#     "macros",
#     "ws-client",
#     "http-client",
#     "jsonrpsee-core",
# ] }
move-binary-format = { path = "external-crates/move/crates/move-binary-format" }
move-bytecode-utils = { path = "external-crates/move/crates/move-bytecode-utils" }
move-command-line-common = { path = "external-crates/move/crates/move-command-line-common" }
move-core-types = { path = "external-crates/move/crates/move-core-types" }
# move-disassembler = { path = "external-crates/move/crates/move-disassembler" }
move-ir-types = { path = "external-crates/move/crates/move-ir-types" }
move-vm-test-utils = { path = "external-crates/move/crates/move-vm-test-utils/", features = [
    "tiered-gas",
] }
move-vm-types = { path = "external-crates/move/crates/move-vm-types" }
move-vm-profiler = { path = "external-crates/move/crates/move-vm-profiler" }
num-traits = "0.2.18"
num-bigint = { version = "0.4", default-features = false, features = ["rand"] }

sui-macros = { git = "https://github.com/mystenlabs/sui", package = "sui-macros", tag = "mainnet-v1.26.2" }
narwhal-config = { git = "https://github.com/mystenlabs/sui", package = "narwhal-config", tag = "mainnet-v1.26.2" }
narwhal-crypto = { git = "https://github.com/mystenlabs/sui", package = "narwhal-crypto", tag = "mainnet-v1.26.2" }
sui-protocol-config = { git = "https://github.com/mystenlabs/sui", package = "sui-protocol-config", tag = "mainnet-v1.26.2" }
shared-crypto = { git = "https://github.com/mystenlabs/sui", package = "shared-crypto", tag = "mainnet-v1.26.2" }
mysten-network = { git = "https://github.com/mystenlabs/sui", package = "mysten-network", tag = "mainnet-v1.26.2" }
mysten-metrics = { git = "https://github.com/mystenlabs/sui", package = "mysten-metrics", tag = "mainnet-v1.26.2" }
parking_lot = "0.12.1"
sui-enum-compat-util = { git = "https://github.com/mystenlabs/sui", package = "sui-enum-compat-util", tag = "mainnet-v1.26.2" }

fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "4988a4744fcaf8bc7f60bf660d9a223ed0f54cc6", features = [
    "copy_key",
] }
fastcrypto-tbls = { git = "https://github.com/MystenLabs/fastcrypto", rev = "4988a4744fcaf8bc7f60bf660d9a223ed0f54cc6" }
fastcrypto-zkp = { git = "https://github.com/MystenLabs/fastcrypto", rev = "4988a4744fcaf8bc7f60bf660d9a223ed0f54cc6", package = "fastcrypto-zkp" }

typed-store-error = { git = "https://github.com/MystenLabs/sui", package = "typed-store-error", tag = "mainnet-v1.26.2" }
derive_more = "0.99.17"
proptest = "1.1.0"
proptest-derive = "0.3.0"
better_any = "0.1.1"
lru = "0.10"

[dev-dependencies]
bincode = "1.3.3"
criterion = { version = "0.5.0", features = [
    "async",
    "async_tokio",
    "html_reports",
] }
proptest = "1.1.0"
proptest-derive = "0.3.0"
serde_yaml = "0.8.26"
expect-test = "1.4.0"

[[bench]]
name = "accumulator_bench"
harness = false

[features]
default = []
test-utils = []
gas-profiler = [
    "move-vm-profiler/gas-profiler",
    "move-vm-types/gas-profiler",
    "move-vm-test-utils/gas-profiler",
]
fuzzing = ["move-core-types/fuzzing"]
